Worked on changes required,created headet,and javascript renaming

--- a/src/index.html
+++ b/src/index.html
@@ -15,10 +15,10 @@
     <title>To-Do-List</title>
   </head>
   <body>
+    <header class="refresh"><i class="fa fa-refresh"></i></header>
     <main class="main">
       <div class="items">
-        <div class="refresh"><i class="fa fa-refresh"></i></div>
-        <ul class="list-items1" id="list-items1">
+               <ul class="listItems1" id="listItems1">
           <li><h3>Today's To Do</h3></li>
           <hr />
           <li>
@@ -30,7 +30,7 @@
             />
           </li>
         </ul>
-        <ul class="list-items" id="list-items"></ul>
+        <ul class="listItems" id="listItems"></ul>
         <div class="cleardiv">
           <button type="button" class="clear" name="clear">
             Clear completed
