Added form element

--- a/src/index.html
+++ b/src/index.html
@@ -18,16 +18,18 @@
     <header class="refresh"><i class="fa fa-refresh"></i></header>
     <main class="main">
       <div class="items">
-               <ul class="listItems1" id="listItems1">
+        <ul class="listItems1" id="listItems1">
           <li><h3>Today's To Do</h3></li>
           <hr />
           <li>
-            <input
-              type="text"
-              class="addtask"
-              id="addtask"
-              placeholder="Add to your list"
-            />
+            <form>
+              <input
+                type="text"
+                class="addtask"
+                id="addtask"
+                placeholder="Add to your list"
+              />
+            </form>
           </li>
         </ul>
         <ul class="listItems" id="listItems"></ul>
